Closed Bug 1276566 Opened 8 years ago Closed 8 years ago

Play video to TV will cause TV crash

Categories

(Firefox OS Graveyard :: GonkIntegration, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:2.6+, b2g-v2.6 fixed)

RESOLVED FIXED
blocking-b2g 2.6+
Tracking Status
b2g-v2.6 --- fixed

People

(Reporter: mlien, Assigned: schien)

References

Details

(Whiteboard: [ft:conndevices])

Attachments

(2 files)

[Testing Steps]
1. TV and Fennec link to same network domain
2. Fennecs link to some specific webpages which contain embedded videos
> e.g., http://edition.cnn.com/2016/05/29/us/cincinnati-zoo-gorilla-shot/index.html
3. Send Fennec's tab to TV

[Expected result]
Enable to send tab and show content normally

[Actual result]
Nexus Player will crash before it plays embedded video
Simulator doesn't have this problem

[Build Info]
Environment: 2.6 Nexus Player
gaia:
https://github.com/mozilla-b2g/gaia/commit/53f70ab0313250225210e966c7407ec828265895
gecko:
https://github.com/mozilla-b2g/gecko-b2g/commit/5601daf5bc520c9e6aaac667e446b1aaae3df94b
Update [Actual result]
Nexus Player will crash before it plays embedded video
Cast video will also crash
Summary: [Nexus Player] Send some specific tabs to TV will cause Nexus Player crash → Cast video to TV will cause TV crash
Assignee: nobody → schien
Component: Gaia::TV → GonkIntegration
Summary: Cast video to TV will cause TV crash → Play video to TV will cause TV crash
Nexus Player is the target device for TV 2.6 release. It uses an OEM specific color format while playing video.
Attachment #8758105 - Flags: review?(howareyou322)
Please notice that this patch will only be landed on TV 2.6 branch.
Attachment #8758105 - Flags: review?(howareyou322) → review+
Comment on attachment 8758105 [details] [diff] [review]
porting-nexus-player-color-format.patch

NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings.

[Approval Request Comment]
Bug caused by (feature/regressing bug #): nexus player porting
User impact if declined: b2g crash while playing video
Testing completed: manual test
Risk to taking this patch (and alternatives if risky): low
String or UUID changes made by this patch: n/a
Attachment #8758105 - Flags: approval-mozilla-b2g48?
blocking-b2g: 2.6? → 2.6+
Comment on attachment 8758105 [details] [diff] [review]
porting-nexus-player-color-format.patch

Approve for TV 2.6
Attachment #8758105 - Flags: approval-mozilla-b2g48? → approval-mozilla-b2g48+
Flags: needinfo?(xeonchen)
https://github.com/mozilla-b2g/gecko-b2g/commit/2c29b9424ff9bd29291cae154b662877289b380e
Status: NEW → RESOLVED
Closed: 8 years ago
Flags: needinfo?(xeonchen)
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: