Bug 1276566 - introduce Nexus Player specific HAL formats. r=pchang. a=jocheng